--- a/src/main/webapp/WEB-INF/templates/person/update.html
+++ b/src/main/webapp/WEB-INF/templates/person/update.html
@@ -14,8 +14,8 @@
                 <strong>Create Person</strong>
             </div>
             <div class="panel-body">
-                <form class="form-horizontal col-md-12 col-sm-12" th:object="${person}" th:action="@{/person/create}"
-                      th:method="POST">
+                <form class="form-horizontal col-md-12 col-sm-12" th:object="${person}"
+                      th:action="@{/person/update/{id}(id=${person.id})}" th:method="POST">
                     <div class="form-group">
                         <label class="control-label">Nome</label>
                         <input class="form-control" th:field="${person.nome}" type="text"
