--- a/src/main/webapp/WEB-INF/templates/person/create.html
+++ b/src/main/webapp/WEB-INF/templates/person/create.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:layout="http://www.thymeleaf.org" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
     <title>Create Person</title>
