--- a/src/main/webapp/WEB-INF/templates/activityarea/create.html
+++ b/src/main/webapp/WEB-INF/templates/activityarea/create.html
@@ -25,7 +25,7 @@
                     </div>
 
                     <div class="form-group">
-                        <button type="submit" class="btn btn-success">Save</button>
+                        <button type="submit" class="btn btn-success">Salvar</button>
                         <a class="btn btn-default" th:href="@{/activityarea/index}">Voltar</a>
                     </div>
                 </form>
