--- a/src/main/webapp/WEB-INF/templates/activityarea/update.html
+++ b/src/main/webapp/WEB-INF/templates/activityarea/update.html
@@ -23,7 +23,7 @@
                                th:value="${activityarea.nome}"/>
                     </div>
                     <div class="form-group">
-                        <button type="submit" class="btn btn-success">Save</button>
+                        <button type="submit" class="btn btn-success">Salvar</button>
                         <a class="btn btn-default" th:href="@{/person/index}">Voltar</a>
                     </div>
                 </form>
